# medcontracthub

./: .bashrc.docker  .dockerignore  .env.consolidated  .env.docker.dev  .env.docker.example  .env.example  .env.extraction.example  .env.local.example  .env.production  .env.production.example  .env.staging  .env.staging.example  .eslintrc.json  .gitignore  .gitmessage  AI_PROPOSAL_GENERATOR_TEST_PLAN.md  ARCHITECTURE.md  CLAUDE.md  CLOUD_NATIVE_ARCHITECTURE.md  CRITICAL_TESTING_METHODOLOGY.md  DEBUG_SAVED_OPPORTUNITIES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEVELOPER_GUIDE.md  DOCKER_PRODUCTION_GUIDE.md  DOCKER_SETUP.md  DOCKER_WSL_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.staging  Dockerfile.test  Dockerfile.worker  ERROR_HANDLING_IMPLEMENTATION.md  ERROR_HANDLING_SUMMARY.md  HIRING_IMMEDIATE.md  HOTFIX_PROGRESS_REPORT.md  MICROSERVICES_RESUME_PLAN.md  MIGRATION_GUIDE.md  (+82 more)
services/ai-service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
services/ai-service/app/: __init__.py
services/ai-service/app/api/: __init__.py  embeddings.py  health.py  inference.py  search.py
services/ai-service/app/config/: __init__.py  settings.py
services/ai-service/app/models/: __init__.py  schemas.py
services/ai-service/app/services/: __init__.py  embedding_service.py  kafka_consumer.py  model_orchestrator.py  redis_cache.py  weaviate_client.py
services/ai-service/app/utils/: __init__.py  logger.py  metrics.py
services/ai-service/tests/: __init__.py  conftest.py
(+914 files in other folders)
